--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ go:
 install:
 - go get github.com/kardianos/govendor
 - govendor get github.com/gohugoio/hugo
-- sudo pip install s3cmd
+- sudo apt-get install libmagic1
+- sudo pip install python-magic s3cmd
 script:
 - hugo -v
 - ls public/
