--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ script:
 - ls public/
 - python --version
 - s3cmd --version
-- s3cmd --access_key="${AWS_ACCESS_KEY_ID}" --secret_key="${AWS_SECRET_ACCESS_KEY}" --region=ap-southeast-1 sync --delete-removed --acl-public --guess-mime-type --recursive public/ s3://blog.skycoin.net/
+- s3cmd --access_key="${AWS_ACCESS_KEY_ID}" --secret_key="${AWS_SECRET_ACCESS_KEY}" --region=ap-southeast-1 sync --force --delete-removed --acl-public --guess-mime-type --recursive public/ s3://blog.skycoin.net/
 - s3cmd --access_key="${AWS_ACCESS_KEY_ID}" --secret_key="${AWS_SECRET_ACCESS_KEY}" --region=ap-southeast-1 ls s3://blog.skycoin.net/
