--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,11 @@ go:
 install:
 - go get github.com/kardianos/govendor
 - govendor get github.com/gohugoio/hugo
-- sudo apt-get install libmagic1
-- sudo pip install python-magic s3cmd
+- sudo pip install s3cmd
 script:
 - hugo -v
 - ls public/
 - python --version
 - s3cmd --version
-- s3cmd --access_key="${AWS_ACCESS_KEY_ID}" --secret_key="${AWS_SECRET_ACCESS_KEY}" --region=ap-southeast-1 sync --delete-removed --acl-public --guess-mime-type --recursive public/ s3://blog.skycoin.net/
+- s3cmd --access_key="${AWS_ACCESS_KEY_ID}" --secret_key="${AWS_SECRET_ACCESS_KEY}" --region=ap-southeast-1 sync --delete-removed --acl-public --guess-mime-type --no-mime-magic --recursive public/ s3://blog.skycoin.net/
 - s3cmd --access_key="${AWS_ACCESS_KEY_ID}" --secret_key="${AWS_SECRET_ACCESS_KEY}" --region=ap-southeast-1 ls s3://blog.skycoin.net/
