--- a/themes/skycoin/theme.toml
+++ b/themes/skycoin/theme.toml
@@ -1,21 +1,8 @@
-# theme.toml template for a Hugo theme
-# See https://github.com/gohugoio/hugoThemes#themetoml for an example
-
 name = "Skycoin"
-license = "MIT"
-licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE.md"
-description = ""
-homepage = "http://example.com/"
-tags = []
-features = []
+description = "Foundations for the new internet · Skycoin"
+homepage = "https://www.skycoin.net/"
 min_version = "0.25.1"
 
 [author]
-  name = ""
-  homepage = ""
-
-# If porting an existing theme
-[original]
-  name = ""
-  homepage = ""
-  repo = ""
+  name = "Skycoin"
+  homepage = "https://www.skycoin.net/"
