--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ title = "Skycoin Blog"
 #disqusShortname = ""
 
 # hugo-xmin specific variables
-theme = "hugo-xmin"
+theme = "skycoin"
 ignoreFiles = ["\\.Rmd$", "_files$", "_cache$"]
 preserveTaxonomyNames = true
 footnotereturnlinkcontents = "↩"
