--- a/themes/skycoin/package.json
+++ b/themes/skycoin/package.json
@@ -5,10 +5,14 @@
   "main": "index.js",
   "license": "UNLICENSED",
   "scripts": {
-    "compile:css": "node-sass static/css/scss/main.scss static/css/main.css --output-style compressed",
-    "watch:css": "yarn compile:css -- -w"
+    "prebuild:css": "node-sass static/css/scss/main.scss static/css/main.css",
+    "build:css": "yarn prebuild:css && postcss static/css/main.css -o static/css/main.css",
   },
   "devDependencies": {
-    "node-sass": "^4.5.3"
+    "autoprefixer": "^7.1.2",
+    "cssnano": "^3.10.0",
+    "node-sass": "^4.5.3",
+    "postcss": "^6.0.8",
+    "postcss-cli": "^4.1.0",
   }
 }
