--- a/themes/skycoin/package.json
+++ b/themes/skycoin/package.json
@@ -6,13 +6,13 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild:css": "node-sass static/css/scss/main.scss static/css/main.css",
-    "build:css": "yarn prebuild:css && postcss static/css/main.css -o static/css/main.css",
+    "build:css": "yarn prebuild:css && postcss static/css/main.css -o static/css/main.css"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "cssnano": "^3.10.0",
     "node-sass": "^4.5.3",
     "postcss": "^6.0.8",
-    "postcss-cli": "^4.1.0",
+    "postcss-cli": "^4.1.0"
   }
 }
