--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,11 @@ install:
 - govendor get github.com/gohugoio/hugo
 - sudo pip install s3cmd
 script:
+- set -eo pipefail
 - hugo -v
 - ls public/
 - python --version
 - s3cmd --version
+after_success:
 - s3cmd --access_key="${AWS_ACCESS_KEY_ID}" --secret_key="${AWS_SECRET_ACCESS_KEY}" --region=ap-southeast-1 sync --delete-removed --acl-public --guess-mime-type --no-mime-magic --recursive public/ s3://blog.skycoin.net/
 - s3cmd --access_key="${AWS_ACCESS_KEY_ID}" --secret_key="${AWS_SECRET_ACCESS_KEY}" --region=ap-southeast-1 ls s3://blog.skycoin.net/
