--- a/themes/skycoin/package.json
+++ b/themes/skycoin/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "license": "UNLICENSED",
   "scripts": {
+    "start": "node-sass static/css/scss/main.scss static/css/main.css --watch",
     "prebuild:css": "node-sass static/css/scss/main.scss static/css/main.css",
     "build:css": "yarn prebuild:css && postcss static/css/main.css -o static/css/main.css"
   },
